--- a/TIPS/Clojure.html
+++ b/TIPS/Clojure.html
@@ -60,7 +60,7 @@
   });
 </script>
     <link rel="top" title="syobochim_MEMO 2013.10.15 ドキュメント" href="../index.html" />
-    <link rel="next" title="rubyMEMO" href="../ruby/dotinstall.html" />
+    <link rel="next" title="Java8" href="java8.html" />
     <link rel="prev" title="jQuery" href="jQuery.html" /> 
   </head>
   <body>
@@ -80,7 +80,7 @@
                 <a href="../genindex.html" title="総合索引" accesskey="I">索引</a>
                 </li>
                 <li>
-                <a href="../ruby/dotinstall.html" title="rubyMEMO" accesskey="N">次へ</a>
+                <a href="java8.html" title="Java8" accesskey="N">次へ</a>
                 </li>
                 <li>
                 <a href="jQuery.html" title="jQuery" accesskey="P">前へ</a>
@@ -126,8 +126,8 @@
   <p class="topless"><a href="jQuery.html"
                         title="前の章へ">jQuery</a></p>
   <h4>次のトピックへ</h4>
-  <p class="topless"><a href="../ruby/dotinstall.html"
-                        title="次の章へ">rubyMEMO</a></p>
+  <p class="topless"><a href="java8.html"
+                        title="次の章へ">Java8</a></p>
   <h3>このページ</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/TIPS/Clojure.txt"
@@ -180,8 +180,8 @@
   <p class="topless"><a href="jQuery.html"
                         title="前の章へ">jQuery</a></p>
   <h4>次のトピックへ</h4>
-  <p class="topless"><a href="../ruby/dotinstall.html"
-                        title="次の章へ">rubyMEMO</a></p>
+  <p class="topless"><a href="java8.html"
+                        title="次の章へ">Java8</a></p>
   <h3>このページ</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/TIPS/Clojure.txt"
@@ -343,7 +343,7 @@
     <ul class="nav pull-right">
       
         <li><a href="../genindex.html" title="総合索引" >索引</a></li>
-        <li><a href="../ruby/dotinstall.html" title="rubyMEMO" >次へ</a></li>
+        <li><a href="java8.html" title="Java8" >次へ</a></li>
         <li><a href="jQuery.html" title="jQuery" >前へ</a></li>
         <li><a href="../index.html">syobochim_MEMO 2013.10.15 ドキュメント</a></li> 
       
