--- a/TIPS/java8.html
+++ b/TIPS/java8.html
@@ -220,6 +220,7 @@
 <li>isPresent() : 値の存在の確認</li>
 <li>get() : 現在の値を取得</li>
 <li>orElse() : 値が存在しない場合に返す値を指定</li>
+<li>ifPresent() : 値が存在する場合のみコードブロックやラムダ式を実行</li>
 </ul>
 </div>
 </div>
