--- a/TIPS/jQuery.html
+++ b/TIPS/jQuery.html
@@ -60,7 +60,7 @@
   });
 </script>
     <link rel="top" title="syobochim_MEMO 2013.10.15 ドキュメント" href="../index.html" />
-    <link rel="next" title="Leiningen" href="Leiningen.html" />
+    <link rel="next" title="Clojure" href="Clojure.html" />
     <link rel="prev" title="Gradle" href="Gradle.html" /> 
   </head>
   <body>
@@ -80,7 +80,7 @@
                 <a href="../genindex.html" title="総合索引" accesskey="I">索引</a>
                 </li>
                 <li>
-                <a href="Leiningen.html" title="Leiningen" accesskey="N">次へ</a>
+                <a href="Clojure.html" title="Clojure" accesskey="N">次へ</a>
                 </li>
                 <li>
                 <a href="Gradle.html" title="Gradle" accesskey="P">前へ</a>
@@ -131,8 +131,8 @@
   <p class="topless"><a href="Gradle.html"
                         title="前の章へ">Gradle</a></p>
   <h4>次のトピックへ</h4>
-  <p class="topless"><a href="Leiningen.html"
-                        title="次の章へ">Leiningen</a></p>
+  <p class="topless"><a href="Clojure.html"
+                        title="次の章へ">Clojure</a></p>
   <h3>このページ</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/TIPS/jQuery.txt"
@@ -190,8 +190,8 @@
   <p class="topless"><a href="Gradle.html"
                         title="前の章へ">Gradle</a></p>
   <h4>次のトピックへ</h4>
-  <p class="topless"><a href="Leiningen.html"
-                        title="次の章へ">Leiningen</a></p>
+  <p class="topless"><a href="Clojure.html"
+                        title="次の章へ">Clojure</a></p>
   <h3>このページ</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/TIPS/jQuery.txt"
@@ -347,7 +347,7 @@
     <ul class="nav pull-right">
       
         <li><a href="../genindex.html" title="総合索引" >索引</a></li>
-        <li><a href="Leiningen.html" title="Leiningen" >次へ</a></li>
+        <li><a href="Clojure.html" title="Clojure" >次へ</a></li>
         <li><a href="Gradle.html" title="Gradle" >前へ</a></li>
         <li><a href="../index.html">syobochim_MEMO 2013.10.15 ドキュメント</a></li> 
       
