--- a/TIPS/Git.html
+++ b/TIPS/Git.html
@@ -173,11 +173,13 @@
   <h4>次のトピックへ</h4>
   <p class="topless"><a href="Gradle.html"
                         title="次の章へ">Gradle</a></p>
-  <h3>このページ</h3>
-  <ul class="this-page-menu">
-    <li><a href="../_sources/TIPS/Git.txt"
-           rel="nofollow">ソースコードを表示</a></li>
-  </ul>
+  <div role="note" aria-label="source link">
+    <h3>このページ</h3>
+    <ul class="this-page-menu">
+      <li><a href="../_sources/TIPS/Git.txt"
+            rel="nofollow">ソースコードを表示</a></li>
+    </ul>
+   </div>
 <div id="searchbox" role="search">
   <h3>クイック検索</h3>
   <form class="search form-inline" action="../search.html" method="get">
@@ -273,7 +275,7 @@
 </pre></div>
 </div>
 <div class="admonition note">
-<p class="first admonition-title">ノート</p>
+<p class="first admonition-title">注釈</p>
 <p class="last">過去のログ、未来のログが見れる。checkoutやmargeの情報も参照可能。</p>
 </div>
 <div class="line-block">
@@ -306,7 +308,7 @@
 </pre></div>
 </div>
 <div class="admonition note">
-<p class="first admonition-title">ノート</p>
+<p class="first admonition-title">注釈</p>
 <p class="last">今いるブランチに対して、[ブランチ名]で指定したブランチをマージする。</p>
 </div>
 <div class="line-block">
@@ -378,7 +380,7 @@ fixup [SHAタグ②] [コミットコメント②]
 <div class="line"><br /></div>
 </div>
 <div class="admonition note">
-<p class="first admonition-title">ノート</p>
+<p class="first admonition-title">注釈</p>
 <p class="last">-uオプションにて、ブランチの上流はoriginリポジトリのmasterブランチであることを設定。</p>
 </div>
 <div class="line-block">
@@ -440,7 +442,7 @@ fixup [SHAタグ②] [コミットコメント②]
       <!-- footer -->
       <footer role="contentinfo">
           &copy; Copyright 2013, syobochim.
-        Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.2.2.
+        Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.3.3.
       </footer>
       <!-- /footer -->
 
