--- a/TIPS/Excel.html
+++ b/TIPS/Excel.html
@@ -131,11 +131,13 @@
   <h4>次のトピックへ</h4>
   <p class="topless"><a href="mysql.html"
                         title="次の章へ">MYSQL とか SQL とか MEMO</a></p>
-  <h3>このページ</h3>
-  <ul class="this-page-menu">
-    <li><a href="../_sources/TIPS/Excel.txt"
-           rel="nofollow">ソースコードを表示</a></li>
-  </ul>
+  <div role="note" aria-label="source link">
+    <h3>このページ</h3>
+    <ul class="this-page-menu">
+      <li><a href="../_sources/TIPS/Excel.txt"
+            rel="nofollow">ソースコードを表示</a></li>
+    </ul>
+   </div>
 <div id="searchbox" role="search">
   <h3>クイック検索</h3>
   <form class="search form-inline" action="../search.html" method="get">
@@ -263,7 +265,7 @@
       <!-- footer -->
       <footer role="contentinfo">
           &copy; Copyright 2013, syobochim.
-        Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.2.2.
+        Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.3.3.
       </footer>
       <!-- /footer -->
 
