--- a/TIPS/jQuery.html
+++ b/TIPS/jQuery.html
@@ -159,11 +159,13 @@
   <h4>次のトピックへ</h4>
   <p class="topless"><a href="Clojure.html"
                         title="次の章へ">Clojure</a></p>
-  <h3>このページ</h3>
-  <ul class="this-page-menu">
-    <li><a href="../_sources/TIPS/jQuery.txt"
-           rel="nofollow">ソースコードを表示</a></li>
-  </ul>
+  <div role="note" aria-label="source link">
+    <h3>このページ</h3>
+    <ul class="this-page-menu">
+      <li><a href="../_sources/TIPS/jQuery.txt"
+            rel="nofollow">ソースコードを表示</a></li>
+    </ul>
+   </div>
 <div id="searchbox" role="search">
   <h3>クイック検索</h3>
   <form class="search form-inline" action="../search.html" method="get">
@@ -269,7 +271,7 @@
 </pre></div>
 </div>
 <div class="admonition note">
-<p class="first admonition-title">ノート</p>
+<p class="first admonition-title">注釈</p>
 <p class="last">AにBが追加される</p>
 </div>
 <div class="line-block">
@@ -279,7 +281,7 @@
 </pre></div>
 </div>
 <div class="admonition note">
-<p class="first admonition-title">ノート</p>
+<p class="first admonition-title">注釈</p>
 <p class="last">BにAが追加される。</p>
 </div>
 <div class="line-block">
@@ -330,7 +332,7 @@
       <!-- footer -->
       <footer role="contentinfo">
           &copy; Copyright 2013, syobochim.
-        Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.2.2.
+        Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.3.3.
       </footer>
       <!-- /footer -->
 
