--- a/TIPS/sakura.html
+++ b/TIPS/sakura.html
@@ -139,11 +139,13 @@
   <h4>次のトピックへ</h4>
   <p class="topless"><a href="UNIX.html"
                         title="次の章へ">UNIX コマンド</a></p>
-  <h3>このページ</h3>
-  <ul class="this-page-menu">
-    <li><a href="../_sources/TIPS/sakura.txt"
-           rel="nofollow">ソースコードを表示</a></li>
-  </ul>
+  <div role="note" aria-label="source link">
+    <h3>このページ</h3>
+    <ul class="this-page-menu">
+      <li><a href="../_sources/TIPS/sakura.txt"
+            rel="nofollow">ソースコードを表示</a></li>
+    </ul>
+   </div>
 <div id="searchbox" role="search">
   <h3>クイック検索</h3>
   <form class="search form-inline" action="../search.html" method="get">
@@ -194,7 +196,7 @@
 </pre></div>
 </div>
 <div class="admonition note">
-<p class="first admonition-title">ノート</p>
+<p class="first admonition-title">注釈</p>
 <p class="last">Altキーを押しながらカーソルでみゅーんってしても出来る</p>
 </div>
 </div>
@@ -259,7 +261,7 @@
       <!-- footer -->
       <footer role="contentinfo">
           &copy; Copyright 2013, syobochim.
-        Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.2.2.
+        Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.3.3.
       </footer>
       <!-- /footer -->
 
